Fixed white space of about page

--- a/ng-portfolio/src/app/about/about.component.scss
+++ b/ng-portfolio/src/app/about/about.component.scss
@@ -35,9 +35,6 @@ section {
   align-items: flex-start;
   padding: 5rem 2rem;
 }
-section:last-child{
-  padding: 0 2rem;
-}
 
 h3 {
   width: 100%;
